syntax = "proto3";

package mangahub.v1;

option go_package = "github.com/nmihtuna204/mangahub/internal/grpc/pb;pb";

// Manga service for internal gRPC communication
service MangaService {
  rpc GetManga(GetMangaRequest) returns (MangaResponse);
  rpc SearchManga(SearchRequest) returns (SearchResponse);
  rpc UpdateProgress(ProgressRequest) returns (ProgressResponse);
}

// Request to get a single manga by ID
message GetMangaRequest {
  string manga_id = 1;
}

// Genre message
message Genre {
  string id = 1;
  string name = 2;
  string slug = 3;
}

// Manga data response
message MangaResponse {
  string id = 1;
  string title = 2;
  string author = 3;
  string artist = 4;
  string description = 5;
  string cover_url = 6;
  string status = 7;
  string type = 8;
  repeated Genre genres = 9;
  int32 total_chapters = 10;
  double average_rating = 11;
  int32 rating_count = 12;
  int32 year = 13;
}

// Search request with filters
message SearchRequest {
  string query = 1;
  repeated string genres = 2;
  string status = 3;
  int32 limit = 4;
  int32 offset = 5;
}

// Search results response
message SearchResponse {
  repeated MangaResponse manga = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

// Progress update request
message ProgressRequest {
  string user_id = 1;
  string manga_id = 2;
  int32 current_chapter = 3;
  string status = 4;
}

// Progress update response
message ProgressResponse {
  string id = 1;
  string user_id = 2;
  string manga_id = 3;
  int32 current_chapter = 4;
  string status = 5;
  int64 timestamp = 6;
}
